@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-15T08:22:59Z",
+  "timestamp" : "2022-07-20T16:26:38Z",
   "count_outdated" : 280,
   "uniques_outdated" : 168,
-  "count" : 282,
-  "uniques" : 170,
+  "count" : 283,
+  "uniques" : 171,
   "clones" : [
     {
       "timestamp": "2022-07-12T00:00:00Z",
@@ -14,6 +14,13 @@
     },
     {
       "timestamp": "2022-07-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
